--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@ font-family: 'Sanchez', serif;
     padding: 0;
 }
 
+body{
+     background-color: red;
+}
+
 :root{
     --color-tittle: #365902;
     --color-bt: #D6352D;
