--- a/style.css
+++ b/style.css
@@ -14,10 +14,6 @@ font-family: 'Sanchez', serif;
     padding: 0;
 }
 
-body{
-     background-color: red;
-}
-
 :root{
     --color-tittle: #365902;
     --color-bt: #D6352D;
@@ -29,7 +25,6 @@ body{
     --font-16: clamp(0.3em ,calc(1.5vw - 0.2em), 1em);
     --font-18: clamp(0.4em, calc(2vw - 0.2em), 1.125em);
 }
-
 
 #main{
     display: none;
@@ -149,4 +144,15 @@ h1{
     position: absolute;
     top: 50%;
     right: 50%;
+}
+
+.categorias{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    max-width: 80%;
+}
+
+.categorias a img{
+    width: 49px;
 }
