--- a/style.css
+++ b/style.css
@@ -186,17 +186,17 @@ h1{
 /* Botão de procura no site */
 
 .search {
-    width: 50%;
+    width: 100%;
     position: relative;
     display: flex;
 }
 
 .search>input {
-    width: 100%;
+    width: 692px;
     border: none;
     padding-left: 10px;
     height: 81px;
-    border-radius: 5px 0 0 5px;
+    border-radius: 0 27px 27px 0;
     color: #D6352D;
     background-color: rgba(191, 109, 78,0.1);
 }
@@ -206,18 +206,48 @@ h1{
 }
 
 .search>button {
-    width: 40px;
-    height: 36px;
+    width: 82px;
+    height: 82px;
     border: none;
     background-color: rgba(191, 109, 78,0.1);
-    align-items: center;
-    border-radius: 0 5px 5px 0;
+    border-radius: 27px 0 0 27px;
     cursor: pointer;
-    justify-content: center;
+}
+
+.search>button>img{
+    width: 30px;
+    margin-left: 20px;
+}
+
+.search>input::placeholder{
+    color: rgba(218, 98, 22, 0.6);
+    font-size: 20px;
 }
 
 .wrapper {
-    width: 40%;
-    position: absolute;
+    width: 58%;
     margin-top: clamp(5px, calc(5vw - .1rem), 60px);
+    display: flex;
+    margin-left: 21%;
+}
+
+
+/*PARTE DOS PRODUROS*/
+
+.produtos{
+    display: flex;
+}
+
+.produtos div {
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+
+.produtos h3 {
+    font-size: 25px;
+}
+
+.produtos p {
+    color: rgba(55, 213, 129, 1);
 }
