--- a/style.css
+++ b/style.css
@@ -22,12 +22,14 @@ font-family: 'Sanchez', serif;
     --color-green: #37d581;
 
     --heigth-img: clamp(1.5rem, calc(5vw - 0.25rem), 4rem);
-    --width-banner: clamp(15rem, calc(60vw - 0.4rem), 80rem);
+    --width-banner: clamp(15rem, calc(80vw - 0.4rem), 75rem);
     --margin-82: clamp(0.8rem, calc(10vw - 1rem), 82px);
 
     --font-16: clamp(0.3em ,calc(1.5vw - 0.2em), 1em);
     --font-18: clamp(0.4em, calc(2vw - 0.2em), 1.125em);
+    --font-25: clamp(0.38em, calc(2vw - 0.2em), 1.5625em);
     --font-19: clamp(0.38em, calc(2vw - 0.2em), 1.1875em);
+    --font-ph: clamp(0.4em, calc(4vw - 0.8em), 1.6em);
     --font-50: clamp(0.7em, calc(4vw - 0.4em), 3.125em);
 }
 
@@ -145,15 +147,16 @@ main > section{
     justify-content: center;
 }
 
-#container img {
+#container > img {
     width: var(--width-banner);
-    border-radius: clamp(2px, calc(2vw - 0.1rem), 20px);
+    border-radius: 0.8vw;
 }
 
 #container{
     display: inline-block;
     position: relative;
     margin: 0 auto;
+    margin-top: 5%;
 }
 #subs{
     width: 100%;
@@ -168,7 +171,7 @@ main > section{
 
 #subs p{
     font-family: 'Sanchez', serif;
-    font-size: var(--font-19);
+    font-size: var(--font-25);
 }
 
 #btn-saiba{
@@ -180,24 +183,25 @@ main > section{
     font-family: 'Sanchez', serif;
     font-size: var(--font-19);
     margin-top: clamp(2px, calc(5vw - 0.6rem), 30px);
+    color: white;
 }
 
 .categorias{
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-top: clamp(5px, calc(5vw - .1rem), 60px);
+    margin-top: clamp(5px, calc(5vw - 0.1rem), 60px);
 }
 .categorias ul{
     display: flex;
     justify-content: space-evenly;
-    width: 55%;
+    width: 75%;
 
 }
 
 .categorias ul li a img{
-    width: clamp(1rem, calc(3vw - 0.1rem), 4rem);
-    padding: clamp(.10rem, calc(1vw - 0.25rem), 7rem);
+    width: clamp(1rem, calc(4vw - 0.1rem), 4rem);
+    padding: clamp(0.10rem, calc(1vw - 0.25rem), 7rem);
     background-color: #E89F71;
     border-radius: clamp(2px, calc(2vw - 0.1rem), 20px);
 }
@@ -211,8 +215,9 @@ main > section{
 }
 
 .search > input {
-    width: clamp(5rem, calc(55vw - 10rem), 37rem);
+    width: clamp(12rem, calc(70vw - 10rem), 50rem);
     height: var(--margin-82);
+    line-height: var(--margin-82);
     border-radius: 0 27px 27px 0;
     color: #D6352D;
     background-color: rgba(191, 109, 78,0.1);
@@ -243,7 +248,7 @@ main > section{
 
 .procurar::placeholder{
     color: rgba(218, 98, 22, 0.6);
-    font-size: var(--font-19);
+    font-size: var(--font-ph);
 }
 
 .wrapper {
@@ -260,7 +265,7 @@ main > section{
     width: 100%;
 }
 #banner-oferta img{
-    width: 60%;
+    width: 65%;
 }
 #banner-text{
     display: flex;
