--- a/style.css
+++ b/style.css
@@ -321,15 +321,16 @@ main > section{
 }
 
 .secao figure {
-    width: 203px;
+    width: 240px;
     height: 258px;
     display: flex; 
     flex-direction: column;
     align-items: center;
     border-radius: 22px;
-    border: 1px red solid;
     justify-content: center;
     padding-top: 8px;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+    
 }
 
 .produtos h3 {
