--- a/style.css
+++ b/style.css
@@ -461,6 +461,138 @@ footer h3:hover{
     gap: 8%;
 }
 
+.modal{
+    display: flex;
+    width: 449px;
+    border: 2px solid red;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+    background-color: white;
+
+}
+
+.center{
+    width: 85%;
+    height: 661px;
+}
+
+.center h3{
+    font-size: 36px;
+    margin-top: 40px;
+}
+
+.center h4{
+    font-size: 18px;
+    margin-top: 20px;
+}
+
+.search2 {
+    width: 100%;
+    position: relative;
+    display: flex;
+    margin-top: 10px;
+}
+
+.search2 > input {
+    width: 300px;
+    height: 45px;
+    line-height: var(--margin-82);
+    border-radius: 0 27px 27px 0;
+    color: #D6352D;
+    background-color: rgba(191, 109, 78,0.1);
+    margin-right: 4%;
+}
+
+.search2 > input:focus {
+    color: #DA6216;
+}
+
+.search2 > button{
+    width: 50px;
+    height: 45px;
+    background-color: rgba(191, 109, 78,0.1);
+    border-radius: 27px 0 0 27px;
+    cursor: pointer;
+}
+
+.procurar2::placeholder{
+    color: rgba(218, 98, 22, 0.6);
+    font-size: 20px
+}
+
+.ul{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+
+.ul li{
+    height: 39px;
+    background-color: rgba(191, 109, 78, 20%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 27px;
+}
+
+.ul1 li{
+    width: 113px;
+}
+
+.ul2 li{
+    width: 73px;
+}
+
+.ul3 li{
+    width: 83px;
+}
+
+.button{
+    width: 180px;
+    height: 43px;
+    background-color: #37D581;
+    color: white;
+    font-size: 24px;
+    border-radius: 15px;
+    margin-top: 100px;
+    margin-left: 90px;
+}
+
+.modal{
+    position: absolute;
+}
+
+.modal-container{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0px;
+    left: 0;
+    z-index: +1;
+    display: none;
+   
+}
+
+.modal-container.mostrar{
+    display: flex;
+}
+
+@keyframes modal{
+    from{
+        opacity: 0;
+        transform: translate3d(0, -60px 0);
+    }
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.mostrar .modal{
+    animation: modal .3s;
+}
+
 /*.profile ul li:first-child:hover
 #btn-join:hover
 .left-navegation nav ul li a:hover*/
