--- a/style.css
+++ b/style.css
@@ -264,10 +264,15 @@ main>section {
     font-size: var(--font-ph);
 }
 
-.wrapper {
+.all-wrapper {
     margin-top: clamp(5px, calc(5vw - .1rem), 60px);
     display: flex;
+    flex-direction: column;
     align-self: center;
+}
+
+.wrapper{
+    display: flex;
 }
 
 /*Banner de ofertas*/
@@ -561,10 +566,11 @@ footer h3:hover{
 
 .modal{
     position: absolute;
+    left: 100%;
 }
 
 .modal-container{
-    width: 100%;
+    width: 53%;
     height: 100%;
     position: relative;
     top: 0px;
