--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ main>section {
 .filter {
     width: var(--margin-82);
     height: var(--margin-82);
+    cursor: pointer;
 }
 
 .search>button>img {
@@ -458,8 +459,9 @@ footer p:hover{
 }
 
 #sobre img, #central img {
-    width: 8%;
+    width: 6%;
     min-width: 5px;
+    margin-right: .5vw;
 }
 
 #central p {
@@ -579,6 +581,7 @@ footer p:hover{
     border-radius: 15px;
     margin-top: 100px;
     margin-left: 90px;
+    cursor: pointer;
 }
 
 .modal{
